--- a/index.html
+++ b/index.html
@@ -8,18 +8,31 @@
     <link rel="stylesheet" href="estilo/elementos.css">
 </head>
 <body>
-    <header>
-        <div class="sombra">
+    <div class="conteiner">
+        <header>
             <h1>Segurança da Informação</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam architecto a corporis eos. Exercitationem placeat explicabo repellendus molestiae facere id. Sapiente vitae itaque quibusdam neque eligendi, incidunt debitis! Assumenda, dicta?</p>
-        </div>
-    </header>
+        </header> 
+    </div>
+    
     <nav>
 
     </nav>
     <main>
         <h2>Indrodução</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt dolor, reprehenderit a harum ab illum facere ipsa fugiat rerum. Id, at deleniti ipsum atque qui iste blanditiis tempore eaque doloremque?</p>
+
+        <article class="indice">
+            <h2>Índice</h2>
+            <ol>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+            </ol>
+        </article>
+
     </main>
     <footer>
         <ul>
