Adição do conteudo

--- a/index.html
+++ b/index.html
@@ -22,26 +22,127 @@
                 </ul>
             </nav>
             <h1>Segurança da Informação</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam architecto a corporis eos. Exercitationem placeat explicabo repellendus molestiae facere id. Sapiente vitae itaque quibusdam neque eligendi, incidunt debitis! Assumenda, dicta?</p>
+            <p>"A segurança da informação compreende o uso de controles de acesso físicos e lógicos, com o intuito de proteger os dados contra modificações acidentais ou não autorizadas, destruição, quebra de sigilo, perda ou dano aos ativos informacionais" (Peltier, 2001, p. 8).</p>
         </header> 
     </div>
     
-    <main>
+    <main class="main">
         <h2>Indrodução</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt dolor, reprehenderit a harum ab illum facere ipsa fugiat rerum. Id, at deleniti ipsum atque qui iste blanditiis tempore eaque doloremque?</p>
+        <p>No mundo cada vez mais conectado e digitalizado em que vivemos, a <strong>segurança da informação</strong> desempenha um papel crucial. Com a crescente dependência de sistemas, redes e dispositivos eletrônicos para armazenar e transmitir dados, a proteção dessas <em>informações</em> tornou-se uma necessidade fundamental para indivíduos, empresas e governos. Neste artigo, discutiremos a importância da <strong>segurança da informação</strong> e como ela impacta diversos aspectos da nossa vida cotidiana.</p>
 
         <article class="indice">
             <h2 class="m-0">Índice</h2>
             <ol class="m-0">
-                <li>Item</li>
-                <li>Item</li>
-                <li>Item</li>
-                <li>Item</li>
-                <li>Item</li>
+                <li><a href="#definicao">Definição</a></li>
+                <li><a href="#hist">História</a></li>
+                <li><a href="#classe">Classificação</a></li>
+                <li><a href="#importancia">A Importância da Segurança da Informação</a></li>
+                <li><a href="#conclusao">Conclusão</a></li>
             </ol>
         </article>
 
+        <h2 id="definicao">1 Definição</h2>
+
+        <p><strong>Segurança da informação</strong> é o conjunto de medidas e práticas que visam proteger as <em>informações</em> de uma organização contra acesso não autorizado, uso indevido, divulgação inadequada, modificação não autorizada ou destruição. Essa área de conhecimento tem como objetivo garantir a <strong>confidencialidade</strong>, <strong>integridade</strong> e <strong>disponibilidade</strong> das informações, bem como preservar sua autenticidade, privacidade e conformidade.</p>
+
+        <p>Veja mais sobre os pilares da segurança da informação, no video abaixo:</p>
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Y0beKLRf-fI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>      
+        
+        <a class="link-fixed" href="#">&uarr;</a>
     </main>
+
+    <article class="main"><h2 id="hist">2 História</h2>
+
+        <p>A história da segurança da informação remonta aos primórdios da computação e do compartilhamento de informações eletrônicas. Aqui está um resumo da evolução da segurança da informação ao longo do tempo:</p>
+
+        <dl>
+            <dt>1. Década de 1960:</dt>
+            <dd>O início da segurança da informação pode ser rastreado até a década de 1960, quando os sistemas de computadores começaram a ser amplamente utilizados em organizações governamentais, militares e acadêmicas. Nesse período, a segurança da informação estava principalmente relacionada à proteção física dos mainframes e ao controle de acesso físico aos computadores.</dd>
+
+            <dt>2. Década de 1970:</dt>
+            <dd>Com o advento das redes de computadores, como a ARPANET (a precursora da Internet), a segurança da informação começou a se expandir para além da segurança física. O desenvolvimento de senhas e sistemas de autenticação foi uma das primeiras medidas de segurança implementadas para proteger o acesso aos sistemas.</dd>
+
+            <dt>3. Década de 1980:</dt>
+            <dd>À medida que os computadores pessoais se tornavam mais comuns, surgiram novas preocupações de segurança. Os vírus de computador começaram a se espalhar, levando ao desenvolvimento dos primeiros programas antivírus. Além disso, foram criados sistemas de criptografia e técnicas de proteção de dados para garantir a confidencialidade e a integridade das informações.</dd>
+
+            <dt>4. Década de 1990:</dt>
+            <dd>Com o crescimento exponencial da Internet e o aumento das transações online, a segurança da informação se tornou uma preocupação global. Surgiram protocolos de segurança, como o Secure Sockets Layer (SSL) e o Virtual Private Network (VPN), para proteger a comunicação e o compartilhamento de informações pela Internet.</dd>
+
+            <dt>5. Década de 2000:</dt>
+            <dd>O início do século XXI testemunhou um aumento significativo nas ameaças cibernéticas, como ataques de hackers, roubo de dados e crimes cibernéticos. As organizações começaram a adotar medidas mais avançadas de segurança, como firewalls de próxima geração, sistemas de detecção de intrusão e soluções de segurança em várias camadas.</dd>
+
+            <dt>6. Década de 2010:</dt>
+            <dd>Com a proliferação de dispositivos móveis, mídias sociais e serviços em nuvem, a segurança da informação enfrentou novos desafios. Questões de privacidade, proteção de dados pessoais e conformidade regulatória tornaram-se áreas críticas de foco. O surgimento de ameaças como ransomware e ataques direcionados levou a um aumento na conscientização sobre segurança cibernética.</dd>
+        </dl>
+    </article>
+
+    <article class="main">
+        <h2 id="classe">3 Classificação</h2>
+
+        <dl>
+            <h3>2.1 Classificação por tipo de ameaças:</h3>
+            <dt>Segurança Cibernética:</dt>
+            <dd>Concentra-se na proteção de sistemas, redes e dados contra ameaças digitais, como hackers, malware e ataques cibernéticos.</dd>
+
+            <dt>Segurança Física:</dt>
+            <dd>Envolve a proteção de ativos físicos, como servidores, equipamentos e instalações, contra roubos, vandalismo e acesso não autorizado.</dd>
+
+            <h3>2.2 Classificação por escopo:</h3>
+            <dt>Segurança de Rede:</dt>
+            <dd>Concentra-se na proteção de redes de computadores contra ameaças externas e internas, utilizando medidas como firewalls, sistemas de detecção de intrusão e criptografia.</dd>
+
+            <dt>Segurança de Sistemas:</dt>
+            <dd>Envolve a proteção de sistemas operacionais, aplicativos e servidores contra vulnerabilidades e ameaças, como falhas de segurança e exploração de software.</dd>
+
+            <dt>Segurança de Dados:</dt>
+            <dd>Refere-se à proteção de dados confidenciais e sensíveis, tanto em repouso quanto em trânsito, por meio de criptografia, controle de acesso e técnicas de anonimização.</dd>
+
+            <dt>Segurança de Aplicativos:</dt>
+            <dd>Concentra-se na proteção de aplicativos e software contra ameaças, como injeção de código, cross-site scripting (XSS) e ataques de negação de serviço (DDoS).</dd>
+
+            <dt>Segurança de Dispositivos:</dt>
+            <dd>Envolve a proteção de dispositivos eletrônicos, como computadores, smartphones e tablets, contra acesso não autorizado e roubo de informações.</dd>
+
+            <h3>2.3 Classificação por medidas de proteção:</h3>
+            <dt>Prevenção:</dt>
+            <dd>Refere-se às medidas tomadas para evitar que ameaças e ataques ocorram, como a implementação de firewalls, sistemas de autenticação forte e políticas de segurança.</dd>
+
+            <dt>Detecção:</dt>
+            <dd>Envolve a identificação e o monitoramento de atividades suspeitas ou violações de segurança por meio de sistemas de detecção de intrusão, análise de registros e ferramentas de monitoramento.</dd>
+
+            <dt>Resposta:</dt>
+            <dd>Diz respeito às ações tomadas após uma violação de segurança, incluindo investigação forense, remediação de incidentes, notificação às partes afetadas e recuperação de sistemas.</dd>
+
+            <dt>Recuperação:</dt>
+            <dd>Envolve a restauração de sistemas, dados e operações após uma violação de segurança ou desastre, utilizando planos de continuidade de negócios e backups.</dd>
+        </dl>
+
+    </article>
+
+    <article class="main">
+        <h2 id="importancia">4 A Importância da Segurança da Informação no Mundo Digital</h2>
+
+        <p>Uma das principais razões pelas quais a <strong>segurança da informação</strong> é tão importante é a proteção da privacidade. Nos dias de hoje, nossos dados pessoais estão armazenados em diversos lugares, como dispositivos móveis, redes sociais, serviços online e empresas. Esses dados podem incluir informações financeiras, detalhes de identificação, histórico médico e outros dados sensíveis. Se essas informações caírem nas mãos erradas, podem ser exploradas para fins ilícitos, como roubo de identidade, fraude financeira e chantagem.</p>
+
+        <p>Além da privacidade, a <strong>segurança da informação</strong> é essencial para garantir a continuidade dos negócios. Muitas empresas dependem fortemente de sistemas de computadores e redes para operar eficientemente. Uma violação de segurança pode resultar em interrupções significativas nas operações, perda de dados, danos à reputação e prejuízos financeiros. Portanto, investir em medidas de segurança adequadas é fundamental para proteger os ativos digitais e manter a confiança dos clientes.</p>
+
+        <p>A <strong>segurança da informação</strong> também desempenha um papel vital na proteção de infraestruturas críticas, como sistemas de energia, transporte e saúde. Uma violação nesses setores pode ter consequências graves, colocando em risco a segurança pública e a estabilidade socioeconômica. A proteção desses sistemas requer a implementação de medidas robustas de segurança cibernética, além de colaboração entre organizações públicas e privadas.</p>
+
+        <p>Para garantir a <strong>segurança da informação</strong>, é necessário adotar uma abordagem em camadas, que envolva diversos aspectos. Isso inclui a implementação de firewalls e sistemas de detecção de intrusão para proteger as redes, o uso de criptografia para proteger dados em trânsito e em repouso, o estabelecimento de políticas de senhas fortes e expiração regular, além de realizar atualizações de software e treinamento de conscientização de segurança para funcionários.</p>
+
+        <p>Além disso, é fundamental estar atento às ameaças emergentes e às melhores práticas de segurança. As técnicas de ataque estão em constante evolução, e os profissionais de segurança devem acompanhar essas mudanças para garantir uma proteção eficaz. Isso inclui estar atualizado sobre as últimas vulnerabilidades, participar de comunidades de segurança, realizar testes de penetração e investir em soluções de segurança confiáveis.</p>
+
+        <p>Em suma, a <strong>segurança da informação</strong> desempenha um papel crucial em nossa sociedade digital. Proteger nossos dados pessoais, garantir a continuidade dos negócios e salvaguardar infraestruturas críticas são apenas algumas das razões pelas quais devemos estar atentos à <strong>segurança da informação</strong>. Investir em medidas de segurança adequadas e estar ciente das melhores práticas são a chave para enfrentar as crescentes ameaças cibernéticas e manter nossas informações protegidas no mundo digital em constante mudança.</p>
+    </article>
+
+    <article class="main">
+        <h2 id="conclusao">Conclusão</h2>
+        <p>A <strong>segurança da informação</strong> refere-se às medidas e práticas adotadas para proteger os <em>dados</em>, sistemas e redes contra ameaças internas e externas. Essas ameaças podem variar desde hackers mal-intencionados e criminosos cibernéticos até erros humanos e desastres naturais. A proteção eficaz da informação requer a implementação de políticas, procedimentos e tecnologias que ajudem a prevenir, detectar e responder a essas ameaças.</p>
+
+        <p>A ela continua a evoluir à medida que a tecnologia avança e as ameaças se tornam mais sofisticadas. Abordagens como inteligência artificial, aprendizado de máquina e análise de <em>dados</em> estão sendo incorporadas às soluções de segurança para detecção e prevenção de ameaças. À medida que a interconectividade e a dependência da tecnologia continuam a crescer, a segurança da informação permanece um desafio constante e essencial para proteger os ativos digitais e a privacidade das pessoas e organizações.</p>
+    </article>
     <div id="rodape">
         <footer>
             <ul class="m-0">
