--- a/pag_n_disp.html
+++ b/pag_n_disp.html
@@ -32,8 +32,7 @@
             border-radius: 0.3rem;
         }
         a:hover {
-            font-weight: bolder;
-            
+            font-weight: bolder; 
         }
 
         ::-webkit-scrollbar {
@@ -49,9 +48,9 @@
 <body>
     <h1>Está página não está disponível</h1>
     <picture>
-        <source media="(max-width: 420px)" srcset="imagens/business_office_elements_data-pp.png">
-        <source media="(max-width: 720px)" srcset="imagens/business_office_elements_data-p.png">
-        <img src="imagens/business_office_elements_data-m.png" alt="Imagem que ilustra tristeza">
+        <source media="(max-width: 420px)" srcset="imagens/segurança-p.png" type="image/png">
+        <source media="(max-width: 650px)" srcset="imagens/segurança-m.png" type="image/png">
+        <img src="imagens/segurança.png" alt="Imagem que ilustra tristeza">
     </picture>
     <a href="index.html" rel="prev">Voltar</a>
 </body>
