adicionei o top-btn

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Y0beKLRf-fI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>      
         
-        <a class="link-fixed" href="#">&uarr;</a>
     </main>
 
     <article class="main"><h2 id="hist">2 História</h2>
@@ -143,6 +142,7 @@
 
         <p>A ela continua a evoluir à medida que a tecnologia avança e as ameaças se tornam mais sofisticadas. Abordagens como inteligência artificial, aprendizado de máquina e análise de <em>dados</em> estão sendo incorporadas às soluções de segurança para detecção e prevenção de ameaças. À medida que a interconectividade e a dependência da tecnologia continuam a crescer, a segurança da informação permanece um desafio constante e essencial para proteger os ativos digitais e a privacidade das pessoas e organizações.</p>
     </article>
+    <a class="link-fixed" href="#"><img src="imagens/top-btn.png" alt="tópo"></a>
     <div id="rodape">
         <footer>
             <ul class="m-0">
